Phase 2.3 + 2.4: HTTP client and JDBC/connection pool selectors
- 2.3: HTTP client selectors for OkHttp 3/4, Apache HC 4.x/5.x, Spring WebClient
  (Reactor Netty); OperationType HTTP_CLIENT_SEND / HTTP_CLIENT_SEND_ASYNC;
  ChaosHttpSuppressException; HttpUrlExtractor (reflective); slots 46-47;
  Java HttpClientImpl advice retained, wiring deferred (AgentBuilder corruption)

- 2.4: JDBC/connection pool selectors; OperationType JDBC_CONNECTION_ACQUIRE,
  JDBC_STATEMENT_EXECUTE, JDBC_PREPARED_STATEMENT, JDBC_TRANSACTION_COMMIT,
  JDBC_TRANSACTION_ROLLBACK; ChaosJdbcSuppressException; JdbcAdvice for
  HikariCP 5.1.0, c3p0 0.10.1, java.sql.Statement/Connection (subtype matching);
  slots 48-52; HANDLE_COUNT=53; instrumentOptional guards for optional deps

- tests: JdbcRuntimeTest (suppress/delay/rate-limit/isolation), JdbcIntegrationTest
  (real H2 + HikariCP end-to-end), HttpClientSelectorTest, JdbcSelectorTest

- fix: Embedded Principal+ Engineer title across all docs